# Rose

./: README.md  Rose.cabal
assets/: color.frag  color.vert  simple.frag  simple.vert  white.frag  white.vert
scripts/: lens.scm  library.scm
src/: Attributes.hs  Collision.hs  Globals.hs  Graphics.hs  Main.hs  Object.hs  Render.hs  SchemeInterface.hs  Scripting.hs  Texture.hs  Types.hs  Universe.hs  Wavefront.hs  Window.hs
src/Linear/: GL.hs
src/Math/: BVH.hs  Mesh.hs  Shapes.hs
