name:                Rose
version:             0.1.0.0
-- synopsis:            
-- description:         
homepage:            https://github.com/danielkeller/Rose
license:             MIT
author:              Dan Keller
maintainer:          dbk40@case.edu
-- copyright:           
category:            Graphics
build-type:          Simple
cabal-version:       >=1.8

executable Rose
  main-is:             Main.hs
  hs-source-dirs:      src
  ghc-options:         -O2 -Wall -threaded
  other-modules:       Attributes
  -- lens and linear have a *TON* of dependencies :(
  build-depends:       base > 3 && < 5, GLFW-b, OpenGL >= 2.9.1, linear == 1.6,
                       vector, attoparsec, bytestring, GLUtil, containers, time >= 1.4.2,
                       vector-algorithms, lens, collections-api, husk-scheme, haskeline,
                       transformers, mtl
  extra-libraries:     OpenGL32